# cpp-tiny-app-starter

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  mk
.github/workflows/: build-test-run.yml
docs/: project-plan.md
include/app/: tiny.hpp  version.hpp
logs/: .keep
src/: main.cpp
tests/: main_unit.cpp
